--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
         <h1>Welcome to magic Notes</h1>
         <div class="card">
             <div class="card-body">
+
                 <h5 class="card-title">Add a Note</h5>
                 <div class="form-group">
-                    <textarea class="form-control" id="addTxt" rows="3"></textarea>
+                    <textarea class="form-control" id="addTitle" rows="1" placeholder="Title" style="resize:none"></textarea>
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" id="addTxt" rows="3" placeholder="Note"></textarea>
                 </div>
                 <button href="#" class="btn btn-primary" id="addbtn">Add Note</button>
             </div>
