--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Head section -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hitesh Chopra - Senior Android Developer Portfolio">
-    <title>Hitesh Chopra - Android Developer</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Hitesh Chopra - Senior Android Developer | Performance Specialist</title>
+    <meta name="title" content="Hitesh Chopra - Senior Android Developer | Performance Specialist">
+    <meta name="description"
+        content="Senior Android Developer specializing in app performance optimization, Jetpack Compose, and modern architecture. View my projects, publications, and skills.">
+    <meta name="keywords"
+        content="Android Developer, Kotlin, Java, App Performance, Jetpack Compose, Clean Architecture, MVVM, MVI, Mobile Development, InMobi, ShareChat">
+    <meta name="author" content="Hitesh Chopra">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hiteshchopra11.github.io/">
+    <meta property="og:title" content="Hitesh Chopra - Senior Android Developer | Performance Specialist">
+    <meta property="og:description"
+        content="Senior Android Developer specializing in app performance optimization, Jetpack Compose, and modern architecture. View my projects, publications, and skills.">
+    <meta property="og:image" content="https://hiteshchopra11.github.io/assets/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://hiteshchopra11.github.io/">
+    <meta property="twitter:title" content="Hitesh Chopra - Senior Android Developer | Performance Specialist">
+    <meta property="twitter:description"
+        content="Senior Android Developer specializing in app performance optimization, Jetpack Compose, and modern architecture. View my projects, publications, and skills.">
+    <meta property="twitter:image" content="https://hiteshchopra11.github.io/assets/images/og-image.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 
     <!-- CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://hiteshchopra11.github.io/">
 </head>
 
 <body class="bg-gray-50">
@@ -254,8 +287,9 @@
                     <!-- App Screenshot - Using the feature image -->
                     <div
                         class="md:w-2/5 flex items-center justify-center p-6 bg-gradient-to-br from-blue-50 to-indigo-100">
-                        <img src="./JS/assets/images/easy-unit-converter-feature.png" alt="Easy Unit Converter App"
-                            class="w-full max-w-md rounded-lg shadow-lg">
+                        <img src="./JS/assets/images/easy-unit-converter-feature.png"
+                            alt="Easy Unit Converter app showing energy conversion interface" width="500" height="800"
+                            loading="lazy" class="w-full max-w-md rounded-lg shadow-lg">
                     </div>
 
                     <!-- App Description -->
@@ -681,7 +715,7 @@
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="text-center md:text-left mb-4 md:mb-0">
-                    <p>© 2024 Hitesh Chopra. All rights reserved.</p>
+                    <p>© 2025 Hitesh Chopra. All rights reserved.</p>
                 </div>
                 <div class="flex space-x-6">
                     <a href="https://github.com/hiteshchopra11" target="_blank"
@@ -703,5 +737,76 @@
 
     <!-- JavaScript -->
     <script src="assets/js/main.js"></script>
+    <!-- SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Hitesh Chopra",
+      "jobTitle": "Senior Android Developer",
+      "url": "https://hiteshchopra11.github.io/",
+      "sameAs": [
+        "https://github.com/hiteshchopra11",
+        "https://www.linkedin.com/in/hiteshchopra11",
+        "https://medium.com/@hiteshchopra11",
+        "https://x.com/hitesh_chopra11"
+      ],
+      "worksFor": {
+        "@type": "Organization",
+        "name": "InMobi",
+        "url": "https://www.inmobi.com/"
+      },
+      "alumniOf": [
+        {
+          "@type": "Organization",
+          "name": "ShareChat",
+          "url": "https://sharechat.com/"
+        },
+        {
+          "@type": "Organization",
+          "name": "Mutual Mobile",
+          "url": "https://mutualmobile.com/"
+        },
+        {
+          "@type": "Organization",
+          "name": "Panjab University",
+          "url": "https://puchd.ac.in/"
+        }
+      ],
+      "knowsAbout": [
+        "Android Development",
+        "Kotlin",
+        "Java",
+        "App Performance Optimization",
+        "Jetpack Compose",
+        "Clean Architecture",
+        "MVVM",
+        "MVI"
+      ]
+    }
+    </script>
+
+    <!-- Add this for your app -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Easy Unit Converter",
+      "operatingSystem": "Android",
+      "applicationCategory": "UtilitiesApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "ratingCount": "100"
+      },
+      "downloadUrl": "https://play.google.com/store/apps/details?id=com.easyutilapps.convertor.android"
+    }
+    </script>
 </body>
+
 </html>
