--- a/index.html
+++ b/index.html
@@ -121,6 +121,62 @@
         </div>
     </section>
 
+    <!-- About Me Section -->
+    <section id="about" class="py-20">
+        <div class="max-w-6xl mx-auto px-4">
+            <div class="text-center mb-12">
+                <h2 class="text-3xl font-bold mb-2">About Me</h2>
+                <p class="text-gray-600">My journey as a developer</p>
+            </div>
+
+            <div class="bg-white p-8 rounded-lg shadow-md">
+                <div class="md:flex items-center space-y-8 md:space-y-0">
+                    <!-- Profile Image -->
+                    <div class="md:w-1/3 flex justify-center">
+                        <div class="relative w-64 h-64 rounded-full overflow-hidden border-4 border-blue-600 shadow-lg">
+                            <img src="/JS/assets/images/hitesh_profile_image.jpeg" alt="Hitesh Chopra - Android Developer"
+                                width="256" height="256" class="w-full h-full object-cover">
+                        </div>
+                    </div>
+
+                    <!-- Bio Content -->
+                    <div class="md:w-2/3 md:pl-8">
+                        <h3 class="text-2xl font-bold text-blue-600 mb-4">Hi, I'm Hitesh!</h3>
+                        <div class="text-gray-700 space-y-4">
+                            <p>
+                                I'm Hitesh Chopra, a passionate Software Engineer specializing in Android development
+                                with over 4 years of professional experience. My journey in coding began in 8th grade
+                                when Java was introduced as part of the ICSE curriculum. What started as a subject
+                                quickly became a fascination as I discovered the logic and creativity behind coding.
+                            </p>
+                            <p>
+                                I took an unconventional path, choosing commerce in higher secondary, then pursuing a
+                                BCA without a master's degree, and still made my way into the tech world as a software
+                                engineer. Since then, I've developed apps across weather, healthcare, and social media
+                                domains, impacting millions of users.
+                            </p>
+                            <p>
+                                I actively contribute to the Android community through blogs and publications. In my
+                                free time, I enjoy playing cricket, badminton, watching documentaries, and reading
+                                books.
+                            </p>
+                        </div>
+                        <div class="mt-6 flex space-x-4">
+                            <a href="#experience"
+                                class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300">
+                                <i class="fas fa-briefcase mr-2"></i>View Experience
+                            </a>
+                            <a href="#projects"
+                                class="border border-blue-600 text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50 transition duration-300">
+                                <i class="fas fa-code mr-2"></i>See Projects
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Experience Section -->
     <section id="experience" class="py-20">
         <div class="max-w-6xl mx-auto px-4">
