--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                 <h2 class="text-2xl mb-4">Senior Android Developer</h2>
                 <p class="text-xl mb-8">Building high-performance Android applications with modern architecture</p>
                 <div class="flex flex-wrap gap-4">
+                    <a href="JS/assets/files/hitesh_chopra_resume.pdf" target="_blank"
+                        class="bg-white text-blue-600 px-6 py-2 rounded-lg hover:bg-blue-50 transition duration-300 custom-button">
+                        <i class="fas fa-file-alt mr-2"></i>Resume
+                    </a>
                     <a href="https://github.com/hiteshchopra11" target="_blank"
                         class="bg-white text-blue-600 px-6 py-2 rounded-lg hover:bg-blue-50 transition duration-300 custom-button">
                         <i class="fab fa-github mr-2"></i>GitHub
@@ -116,7 +120,7 @@
                         class="border border-white px-6 py-2 rounded-lg hover:bg-blue-700 transition duration-300 custom-button">
                         <i class="fab fa-medium mr-2"></i>Medium
                     </a>
-                </div>
+                </div>                
             </div>
         </div>
     </section>
@@ -162,6 +166,10 @@
                             </p>
                         </div>
                         <div class="mt-6 flex space-x-4">
+                            <a href="JS/assets/files/hitesh_chopra_resume.pdf" target="_blank"
+                                class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300">
+                                <i class="fas fa-file-alt mr-2"></i>Resume
+                            </a>
                             <a href="#experience"
                                 class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300">
                                 <i class="fas fa-briefcase mr-2"></i>View Experience
